<resources>
    <string name="app_name">Fridgy</string>

    <!-- Auth Screens -->
    <string name="welcome_to_fridgy">Welcome to Fridgy!</string>
    <string name="manage_fridge_effortlessly">Manage your fridge, effortlessly.</string>
    <string name="join_fridgy_today">Join Fridgy Today!</string>
    <string name="unlock_effortless_management">Unlock effortless fridge management.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
...
    <string name="error_item_not_found">Item not found in fridge.</string>
    <string name="error_failed_to_load_details">Failed to load details.</string>
    <string name="error_failed_to_send_invitation">Failed to send invitation.</string>
    <string name="error_please_fill_all_fields">Please fill in all fields.</string>
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
    <string name="error_signup_failed">Sign up failed. Please try again.</string>
    <string name="error_please_enter_email_password">Please enter both email and password.</string>
    <string name="error_login_failed">Login failed. Please try again.</string>
    <string name="error_failed_to_add_item">Failed to add item to fridge: %1$s</string>
    <string name="error_failed_to_create_product">Failed to create product: %1$s</string>
    <string name="error_loading_data_prefix">Error Loading Data: %1$s</string>
    <string name="error_username_invalid_chars">Username can only contain letters, numbers, underscores, and periods</string>
    <string name="error_username_too_short">Username must be at least 3 characters</string>
...
